--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   background-color: #f1f4fa;
 }
 
+.menu-title{
+  color:#82adff;
+}
+.menu-active{
+  color:#82adff;
+  font-weight: bold;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
